--- a/custom-client.properties
+++ b/custom-client.properties
@@ -1,4 +1,4 @@
 server.port=8081
 #Custom Properties
-project.name =Spring Boot Application Changed Again
+project.name =Spring Boot Application 4
 management.endpoints.web.exposure.include.=*
