--- a/custom-client.properties
+++ b/custom-client.properties
@@ -2,3 +2,8 @@ server.port=8081
 #Custom Properties
 project.name =Spring Boot Application 5
 management.endpoints.web.exposure.include.=*
+
+spring.datasource.url=
+spring.datasource.username=
+spring.datasource.password=
+spring.datasource.driver-class-name=
