--- a/custom-client.properties
+++ b/custom-client.properties
@@ -7,3 +7,16 @@ spring.datasource.url=
 spring.datasource.username=
 spring.datasource.password=
 spring.datasource.driver-class-name=
+
+
+spring.datasource.platform=
+spring.datasource.schema=
+spring.datasource.data=
+spring.datasource.initialization-mode=
+
+
+#HikariCP Settings
+#60 sec
+spring.datasource.hikari.connection-timeout=60000
+# max 5
+spring.datasource.hikari.maximum-pool-size=5
